# pyfolio

./: .coveragerc  .editorconfig  .gcloudignore  .gitignore  .ruff.toml  .travis.yml  AGENTS.md  LICENSE  Makefile  Procfile  README.md  README.rst  app.yaml  bitbucket-pipelines.yml  main.py  manage.py  pyproject.toml  requirements.txt  setup.cfg
.clinerules/: README.md  maintenance.md
.github/workflows/: build.yml  supabase-activity-scheduler.yml
base_site/: apps.py  context_processors.py  urls.py  views.py
base_site/migrations/: 0001_create_fn_prevent_pausing.py
base_site/static/css/: index.css
base_site/templates/: base.html  index.html  navbar.html
base_site/templates/registration/: login.html
core/templates/registration/: login.html
emr/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
emr/migrations/: 0001_initial.py  0002_auto_20170915_1924.py  0003_auto_20170916_0147.py  0004_auto_20170917_0158.py  0005_patient_profile_picture.py  0006_auto_20171118_1932.py  0007_auto_20220418_0022.py  0008_alter_patient_identification.py  0009_medicalrecord_last_modified.py
emr/resources/datatables/: spanish.json
emr/templates/emr/: base.html  index.html  navbar.html  patient_confirm_delete.html  (+4 more)
navigation/templatetags/: nav.py
patients/: admin.py  apps.py  models.py  urls.py  views.py
pyfolio/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
pyfolio/settings/: dev.py  development.py  production.py  test.py
templates/: base.html  footer.html  index.html  navbar.html
templates/pyfolio/: base.html  index.html  navbar.html
templates/registration/: login.html
(+38 files in other folders)
