[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfolio"
dynamic = ["version"]
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.11,<6.0",
    "django-bootstrap5>=26.1",
    "dj-database-url>=3.1.0",
    "django-s3-storage>=0.15.0",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "gunicorn>=23.0.0",
    "whitenoise>=6.11.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.13.4",
    "django-extensions>=4.1",
    "freezegun>=1.5.5",
    "model-bakery>=1.21.0",
    "ruff>=0.14.10",
]

[tool.hatch.version]
path = "pyfolio/__init__.py"

[tool.uv]
required-version = ">=0.10.2"

[tool.ruff]
exclude = [
    "manage.py",
    "pyfolio/settings",
    "emr/migrations",
]
