[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfolio"
dynamic = ["version"]
requires-python = "~=3.14.3"
dependencies = [
    "django~=5.2.12",
    "django-bootstrap5>=26.1",
    "dj-database-url>=3.1.2",
    "django-s3-storage>=0.15.0",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "gunicorn>=25.1.0",
    "whitenoise>=6.12.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7",
    "django-extensions>=4",
    "freezegun>=1",
    "model-bakery>=1",
    "ruff>=0.15",
]

[tool.hatch.version]
path = "pyfolio/__init__.py"

[tool.uv]
required-version = ">=0.10.2"

[tool.ruff]
exclude = [
    "manage.py",
    "pyfolio/settings",
    "emr/migrations",
]
